fix to header gap

--- a/style.css
+++ b/style.css
@@ -2805,7 +2805,7 @@
   #autocompletion.mobile input {
     width: 98%;
   }
-  
+
   div.content_container {
     padding-top: 0px;
   }
@@ -2982,7 +2982,7 @@
 @media ( max-width: 1199px ) {
 
   div.content_container {
-    padding-top: 150px;
+    padding-top: 129px;
   }
 
   body .container {
@@ -3010,7 +3010,7 @@
 @media ( min-width: 1200px ) {
 
   div.content_container {
-    padding-top: 150px;
+    padding-top: 129px;
   }
 
   /* HDP GALLERY */
